# Asahi

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  configexample.py  configexample.toml  configoptions.py  configoptions.toml  docker-compose.yml  main.py  pm2.json  pyproject.toml  requirements.txt  schema.sql
.github/: PULL_REQUEST_TEMPLATE.md
cogs/: actions.py  afk.py  anime.py  botowner.py  errorhandler.py  facts.py  fun.py  general.py  guild.py  help.py  jishaku.py  listeners.py  misc.py  moderation.py  music.py  nhentai.py  nsfw.py  onedit.py  owner.py  serversettings.py  snipe.py  stats.py  status.py  tasks.py  utility.py
cogs/wss/: __init__.py  menu.py  utils.py  wss.py
docs/: docker.md
docs/selfhosting/: linux.md  process_management.md  windows.md
kurisu/: __main__.py  main.py
kurisu/cogs/: actions.py  afk.py  botowner.py  for_toki.py  fun.py  help.py  jishaku.py  listeners.py  misc.py  moderation.py  music.py  nsfw.py  searches.py  serversettings.py  snipe.py  tasks.py  testing.py  utility.py
kurisu/core/: __init__.py  context.py  kurisu.py
kurisu/utilities/: __init__.py  context.py  errors.py  funcs.py  helpers.py
kurisu/utils/: dbmanagers.py  errors.py  funcs.py  helpers.py  kurisu.py  log.py  schema.py
src/: __main__.py
src/cogs/: anime.py  devtools.py  fun.py  help.py  jishaku.py  listeners.py  meta.py  (+8 more)
utils/: classes.py  context.py  database.py  dbmanagers.py  default.py  funcs.py  helpers.py  helpstrings.py  kurisu.py  lists.py  log.py  misc.py  permissions.py  schema.py  vars.py
(+26 files in other folders)
